[package]
name = "divisors-fixed"
version = "0.3.1"
authors = ["jh05013 <jhztfs@gmail.com>"]
description = "A fixed version of the divisors crate"
license = "MIT"
documentation = "https://docs.rs/divisors-fixed/"
repository = "https://github.com/jh05013/divisors"
readme = "README.md"
edition = "2021"
categories = ["mathematics", "algorithms"]

[lib]
name = "divisors"
crate-type = ["rlib"]


[dependencies]
num-traits = "0.2.18"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "big_numbers"
harness = false